--- a/Assignment1/style.css
+++ b/Assignment1/style.css
@@ -6,7 +6,7 @@
 
 body {
   background: linear-gradient(135deg, #007bff, #004085);
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #333;
   height: 100vh;
   display: flex;
@@ -26,6 +26,7 @@ body {
   background-color: #fff;
   border-radius: 10px;
   padding: 40px;
+  margin: 100px;
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
 }
 h1 {
@@ -41,7 +42,8 @@ h3 {
   margin-bottom: 25px;
 }
 
-input, select {
+input,
+select {
   width: 100%;
   padding: 10px 15px;
   margin: 10px 0;
@@ -50,7 +52,9 @@ input, select {
   font-size: 0.95rem;
 }
 
-input::placeholder, select, option {
+input::placeholder,
+select,
+option {
   font-size: 0.9rem;
   color: #777;
 }
@@ -61,7 +65,7 @@ input::placeholder, select, option {
   margin-top: 15px;
   border: none;
   border-radius: 6px;
-  background: linear-gradient(90deg, #0062E6, #33AEFF);
+  background: linear-gradient(90deg, #0062e6, #33aeff);
   color: #fff;
   font-weight: 600;
   cursor: pointer;
@@ -69,7 +73,7 @@ input::placeholder, select, option {
 }
 
 .btn-primary:hover {
-  background: linear-gradient(90deg, #0051C7, #2890E0);
+  background: linear-gradient(90deg, #0051c7, #2890e0);
   transform: translateY(-2px);
 }
 
@@ -80,7 +84,7 @@ input::placeholder, select, option {
 }
 
 .login-text a {
-  color: #0062E6;
+  color: #0062e6;
   text-decoration: none;
   font-weight: 500;
 }
